--- a/views/index.mustache
+++ b/views/index.mustache
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>User Directory</title>
+    <link rel="stylesheet" href="/css/index.css">
   </head>
   <body>
     <div class="index">
