--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,29 @@
-body{
-  background-color: red;
+*{
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+.index{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.index h3{
+  flex: 1 100%;
+}
+
+.user-index {
+    flex: 1 22%;
+    margin: 0.75rem;
+    padding: 0 1rem;
+    border: 1px solid #E6E6E6;
+}
+
+a {
+    text-decoration: none;
+    color: #367CD6;
+}
+
+a: visited{
+  color: #367CD6;
 }
