--- a/views/index.mustache
+++ b/views/index.mustache
@@ -9,7 +9,7 @@
     <div class="index">
       <h3>Index</h3>
       {{#users}}
-      <div class="user-index" style = "border: 1px solid">
+      <div class="user-index">
         <a href="#{{username}}"><img src={{avatar}} alt=""></a>
         <a href="#{{username}}"><h3>{{name}}</h3></a>
         {{#job}}
