--- a/views/index.mustache
+++ b/views/index.mustache
@@ -22,7 +22,7 @@
       {{/users}}
     </div>
     {{#users}}
-    <div class="user-card" id={{username}} style = "border: 1px solid red">
+    <div class="user-card" id={{username}}>
       <div class="user-image">
         <img src={{avatar}} alt="">
       </div>
