--- a/views/index.mustache
+++ b/views/index.mustache
@@ -9,9 +9,9 @@
     <div class="index">
       <h3>Index</h3>
       {{#users}}
-      <div class="user-index">
-        <a href="#{{username}}"><img src={{avatar}} alt=""></a>
-        <a href="#{{username}}"><h3>{{name}}</h3></a>
+      <div class="user-index" onclick="loadCard({{username}})">
+        <img src={{avatar}} alt="">
+        <h3>{{name}}</h3>
         {{#job}}
         <p>{{job}}, {{company}}</p>
         {{/job}}
@@ -22,7 +22,7 @@
       {{/users}}
     </div>
     {{#users}}
-    <div class="user-card" id={{username}}>
+    <div class="user-card hidden" onclick="hideCard({{username}})" id="{{username}}">
       <div class="user-image">
         <img src={{avatar}} alt="">
       </div>
@@ -30,7 +30,7 @@
         <h1>{{name}}</h1>
         <p>
           {{#address}}
-          {{city}}, {{country}}
+          {{#city}}{{city}},{{/city}} {{country}}
           {{/address}}
           |
           {{#job}}
@@ -57,6 +57,9 @@
             </ul></td>
           </tr>
         </table>
+      </div>
+      <div class="return">
+        <p>Click to return to the Directory</p>
       </div>
     </div>
     {{/users}}
