--- a/views/index.mustache
+++ b/views/index.mustache
@@ -30,7 +30,7 @@
         <h1>{{name}}</h1>
         <p>
           {{#address}}
-          {{#city}}{{city}},{{/city}} {{country}}
+          {{#city}}{{city}},{{/city}} <a href="/directory/country/{{country}}">{{country}}</a>
           {{/address}}
           |
           {{#job}}
@@ -53,7 +53,7 @@
           <tr>
             <td><b>Skills</b></td>
             <td><ul>
-              {{#skills}}<li>{{.}}</li>{{/skills}}
+              {{#skills}}<li><a href="/directory/skills/{{.}}">{{.}}</a></li>{{/skills}}
             </ul></td>
           </tr>
         </table>
